--- a/index.html
+++ b/index.html
@@ -16,36 +16,33 @@
     </div>
 <br>
 <br>
-    <form id="converter-form ">
+    <form id="converter-form">
       <div class="form-group">
-        <label for="input"><b>Enter value in Degree : </b></label>
-        <input type="number" id="input" placeholder="Enter value in Degree" required />
+        <label for="temInput"><b>Enter Temperature : </b></label>
+        <input type="number" id="temInput" placeholder="Enter Temperature value" required />
       </div>
 <br>
-      <div class="form-group ">
-        <label for="output"><b>Select the input unit : </b></label>
-        <select id="output">
-          <option value="celsius">Celsius(C)</option>
-          <option value="fahrenheit">Fahrenheit(F)</option>
-          <option value="kelvin">Kelvin(K)</option>
+      <div class="form-group">
+        <label for="unitInput"><b>Select the input unit : </b></label>
+        <select id="unitInput">
+          <option value="C">Celsius(C)</option>
+          <option value="F">Fahrenheit(F)</option>
+          <option value="K">Kelvin(K)</option>
         </select>
       </div>
 <br>
-      <div class="form-group ">
-        <label for="converter"><b>Select the output unit : </b></label>
-        <select id="converter">
-          <option value="celsius">Celsius</option>
-          <option value="fahrenheit">Fahrenheit</option>
-          <option value="kelvin">Kelvin</option>
+      <div class="form-group">
+        <label for="unitOutput"><b>Select the output unit : </b></label>
+        <select id="unitOutput">
+          <option value="C">Celsius</option>
+          <option value="F">Fahrenheit</option>
+          <option value="K">Kelvin</option>
         </select>
       </div>
 <br>
-      <div class="form-group ">
-        <label for="result"><b>Result : </b></label>
-        <input type="text" id="result" disabled />
-      </div>
+     <b><div id="resultOutput"></div></b>
 <br>
-      <button type="submit"><b>Convert</b></button>
+      <button type="button" onclick="convertTemp()"><b>Convert</b></button>
     </form>
   </main>
 
