--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
 <br>
 <br>
+// Input Temperature
     <form id="converter-form">
       <div class="form-group">
         <label for="temInput"><b>Enter Temperature : </b></label>
@@ -40,7 +41,7 @@
         </select>
       </div>
 <br>
-     <b><div id="resultOutput"></div></b>
+     <div id="resultOutput"></div>
 <br>
       <button type="button" onclick="convertTemp()"><b>Convert</b></button>
     </form>
