--- a/index.html
+++ b/index.html
@@ -16,33 +16,37 @@
     </div>
 <br>
 <br>
-// Input Temperature
+<!-- Input Temperature -->
     <form id="converter-form">
       <div class="form-group">
         <label for="temInput"><b>Enter Temperature : </b></label>
         <input type="number" id="temInput" placeholder="Enter Temperature value" required />
       </div>
 <br>
+<!-- Input Temperature Unit -->
       <div class="form-group">
         <label for="unitInput"><b>Select the input unit : </b></label>
         <select id="unitInput">
-          <option value="C">Celsius(C)</option>
-          <option value="F">Fahrenheit(F)</option>
+          <option value="C">Celsius(°C)</option>
+          <option value="F">Fahrenheit(°F)</option>
           <option value="K">Kelvin(K)</option>
         </select>
       </div>
 <br>
+<!-- Desired Output Unit -->
       <div class="form-group">
         <label for="unitOutput"><b>Select the output unit : </b></label>
         <select id="unitOutput">
-          <option value="C">Celsius</option>
-          <option value="F">Fahrenheit</option>
-          <option value="K">Kelvin</option>
+          <option value="C">Celsius(°C)</option>
+          <option value="F">Fahrenheit(°F)</option>
+          <option value="K">Kelvin(K)</option>
         </select>
       </div>
 <br>
+<!-- Displaying Result -->
      <div id="resultOutput"></div>
 <br>
+<!-- Convert Button -->
       <button type="button" onclick="convertTemp()"><b>Convert</b></button>
     </form>
   </main>
